--- a/setting.html
+++ b/setting.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Loading...</title>
-        <link rel="stylesheet" href="css/style.css?v=4">
-        <link rel="stylesheet" href="css/setting.css?v=4">
+        <title>Настройки</title>
+        <link rel="stylesheet" href="css/style.css?v=5">
+        <link rel="stylesheet" href="css/setting.css?v=5">
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBB07CK3DY"></script>
@@ -29,30 +29,28 @@
             startstylepage();
         </script>
         <div class="body-trans">
-            <div id="maindiv">
-                <div id="bodydiv" class="content">
-                    <div class="onecol">
-                        <div id="title" class="titlediv nav-button">
-                            <h1>Настройки</h1>
-                        </div>
-                        <div class="pc-only">
-                            <a class="aace links button-e" href="."><button class="nav-button">Главная</button></a>
-                            <hr class="pc-only nav-hr">
-                            <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
-                            <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a><br>
-                        </div>
+            <div id="bodydiv" class="content">
+                <div class="onecol">
+                    <div id="title" class="titlediv nav-button">
+                        <h1>Настройки</h1>
                     </div>
-                    <div class="twocol">
-                        <div class="al-left">
-                            <p class="aace nav-button">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
-                            <h2 class="aace al-left nav-button">Тема</h2>
-                            <button class="nav-button button-e" onclick="swap_theme(3)">Темная</button><br>
-                            <button class="nav-button button-e" onclick="swap_theme(2)">Белая</button><br>
-                            <button class="nav-button button-e" onclick="swap_theme(1)">Чёрная</button><br>
-                        </div>
-                        <div class="copyright mobile-only">
-                            <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
-                        </div>
+                    <div class="pc-only">
+                        <a class="aace links button-e" href="."><button class="nav-button">Главная</button></a>
+                        <hr class="pc-only nav-hr">
+                        <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
+                        <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a><br>
+                    </div>
+                </div>
+                <div class="twocol">
+                    <div class="al-left">
+                        <p class="aace nav-button">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
+                        <h2 class="aace al-left nav-button">Тема</h2>
+                        <button class="nav-button button-e" onclick="swap_theme(3)">Темная</button><br>
+                        <button class="nav-button button-e" onclick="swap_theme(2)">Белая</button><br>
+                        <button class="nav-button button-e" onclick="swap_theme(1)">Чёрная</button><br>
+                    </div>
+                    <div class="copyright mobile-only">
+                        <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
                     </div>
                 </div>
             </div>
