--- a/ch.html
+++ b/ch.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Страница главы</title>
-        <link rel="stylesheet" href="css/style.css?v=4">
-        <link rel="stylesheet" href="css/ch.css?v=4">
+        <link rel="stylesheet" href="css/style.css?v=5">
+        <link rel="stylesheet" href="css/ch.css?v=5">
         <link rel="stylesheet" href="css/color-dark.css?v=4">
         <script type="text/javascript" src="js/ch.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
@@ -27,45 +27,43 @@
             startstylepage();
         </script>
         <div class="body-trans">
-            <div id="maindiv">
-                <progress class="progress-page" id="progresspage"></progress><br><h id="titlesys"></h>
-                <div class="content" id="bodydiv" style="visibility: hidden;">
-                    <div class="onecol">
-                        <div id="title_ch" class="titlediv">
-                            <h2 id="namech"></h2>
-                        </div>
-                        <button class="card-button-ch nav-button-home pc-only"  onclick="manga_page()">Главы</button>
-                        <button class="card-button-ch nav-button-fullscreen pc-only"  onclick="toggleFullScreen()">Экран</button>
-                        <div id="copyright" class="pc-only">
-                            <hr class="pc-only nav-hr">
-                            <a class="aace links button-e" href="."><button class="nav-button">Главная</button></a>
-                            <a class="aace links button-e" href="setting.html"><button class="nav-button">Настройки</button></a>
-                            <hr class="pc-only nav-hr">
-                            <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
-                            <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a><br>
-                            
-                        </div>
+            <progress class="progress-page" id="progresspage"></progress><h id="titlesys" class="invis"></h>
+            <div class="content" id="bodydiv" style="visibility: hidden;">
+                <div class="onecol">
+                    <div id="title_ch" class="titlediv nav-button">
+                        <h2 id="namech"></h2>
                     </div>
-                    <div class="twocol">
-                        <progress class="progress-page" id="progressimage"></progress><br>
-                        <p class="aace"><span id="curentpage">1</span> / <span id="totalpage"></span></p>
-                        <img src="" id="mangapage"><br>
-                        <progress class="progress-page" id="progressimage2"></progress><br>
-                        <div id="pc_elem">
-                        <button id="prevbutton" class="card-button-ch nav-button-ch" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="card-button-ch nav-button-ch" onclick="page_flip(1)">Страница &#62;</button>
-                        </div>
-                        <div id="mobile_elem">
-                            <button id="prevbutton" class="card-button-ch nav-button-ch" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="card-button-ch nav-button-ch" onclick="page_flip(1)">Страница &#62;</button></br>
-                            <button class="card-button-ch nav-button-fullscreen"  onclick="toggleFullScreen()">Экран</button><button class="card-button-ch nav-button-home"  onclick="manga_page()">Главы</button>
-                        </div>
-                    </div>
-                    <div id="copyright" class="copyright mobile-only">
-                        <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
-                        <a class="aace links" href="setting.html">Настройки</a>
+                    <button class="card-button-ch nav-button-home pc-only"  onclick="manga_page()">Главы</button>
+                    <button class="card-button-ch nav-button-fullscreen pc-only"  onclick="toggleFullScreen()">Экран</button>
+                    <div id="copyright" class="pc-only">
+                        <hr class="pc-only nav-hr">
+                        <a class="aace links" href="."><button class="nav-button button-e">Главная</button></a>
+                        <a class="aace links" href="setting.html"><button class="nav-button button-e">Настройки</button></a>
+                        <hr class="pc-only nav-hr">
+                        <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
+                        <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a><br>
+                        
                     </div>
                 </div>
+                <div class="twocol">
+                    <progress class="progress-page" id="progressimage"></progress>
+                    <p class="aace"><span id="curentpage">1</span> / <span id="totalpage"></span></p>
+                    <img src="" id="mangapage"><br>
+                    <progress class="progress-page" id="progressimage2"></progress><br>
+                    <div id="pc_elem">
+                    <button id="prevbutton" class="card-button-ch nav-button-ch" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="card-button-ch nav-button-ch" onclick="page_flip(1)">Страница &#62;</button>
+                    </div>
+                    <div id="mobile_elem">
+                        <button id="prevbutton" class="card-button-ch nav-button-ch" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="card-button-ch nav-button-ch" onclick="page_flip(1)">Страница &#62;</button></br>
+                        <button class="card-button-ch nav-button-fullscreen"  onclick="toggleFullScreen()">Экран</button><button class="card-button-ch nav-button-home"  onclick="manga_page()">Главы</button>
+                    </div>
+                </div>
+                <div id="copyright" class="copyright mobile-only">
+                    <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                    <a class="aace links" href="setting.html">Настройки</a>
+                </div>
             </div>
-            <p id="infoflipch" class="invis2"></p><p id="infotitle" class="invis2"></p><p id="infostart" class="invis2"></p><p id="infoend" class="invis2"></p><p id="infohead" class="invis2"></p>
+            <p id="infoflipch" class="invis"></p><p id="infotitle" class="invis"></p><p id="infostart" class="invis"></p><p id="infoend" class="invis"></p><p id="infohead" class="invis"></p>
         </div>
         <script type="text/javascript">
             load_page_first();
