--- a/manga.html
+++ b/manga.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Страница манги</title>
-        <link rel="stylesheet" href="css/style.css?v=4">
-        <link rel="stylesheet" href="css/manga.css?v=4">
+        <link rel="stylesheet" href="css/style.css?v=5">
+        <link rel="stylesheet" href="css/manga.css?v=5">
         <link rel="stylesheet" href="css/color-dark.css">
         <script type="text/javascript" src="js/manga.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
@@ -27,40 +27,38 @@
             startstylepage();
         </script>
         <div class="body-trans">
-            <div id="maindiv">
-                <progress class="progress-page" id="progress"></progress><br>
-                <div class="content" id="bodydiv" style="visibility: hidden;">
-                    <div class="onecol">
-                        <img id="cover" class="cover">
-                        <div id="title" class="aace nav-button">
-                            <h1></h1>
-                        </div>
-                        <div class="pc-only">
-                            <a class="aace links button-e" href="."><button class="nav-button">Главная</button></a>
-                            <a class="aace links button-e" href="setting.html"><button class="nav-button">Настройки</button></a>
-                            <hr class="pc-only nav-hr">
-                            <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
-                            <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a><br>
-                        </div>
+            <progress class="progress-page" id="progress"></progress>
+            <div class="content" id="bodydiv" style="visibility: hidden;">
+                <div class="onecol">
+                    <img id="cover" class="cover">
+                    <div id="title" class="nav-button">
+                        <h1></h1>
                     </div>
-                    <div class="twocol">
-                        <div id="cardinfo" class="card">
-                            <p id="cardinfo1"></p>
-                            <p id="cardinfo2"></p>
-                            <p id="cardinfo3"></p>
-                        </div>
-                        <div id="cardinfo" class="card">
-                            <p>Описание:</p>
-                            <p id="descriptionmanga" class="aace"></p>
-                        </div>
-                        <div id="cardinfoch" class="cardch">
-                            <p>Главы:</p>
-                            <p id="helper1" class="invis"></p>
-                        </div>
-                        <div class="copyright mobile-only">
-                            <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
-                            <a class="aace links" href="setting.html">Настройки</a>
-                        </div>
+                    <div class="pc-only">
+                        <a class="links" href="."><button class="nav-button button-e">Главная</button></a>
+                        <a class="links" href="setting.html"><button class="nav-button button-e">Настройки</button></a>
+                        <hr class="pc-only nav-hr">
+                        <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
+                        <a class="links" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a><br>
+                    </div>
+                </div>
+                <div class="twocol">
+                    <div id="cardinfo" class="card">
+                        <p id="cardinfo1"></p>
+                        <p id="cardinfo2"></p>
+                        <p id="cardinfo3"></p>
+                    </div>
+                    <div id="cardinfo" class="card">
+                        <p>Описание:</p>
+                        <p id="descriptionmanga"></p>
+                    </div>
+                    <div id="cardinfoch" class="cardch">
+                        <p>Главы:</p>
+                        <p id="helper1" class="invis"></p>
+                    </div>
+                    <div class="copyright mobile-only">
+                        <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="links" href=".">/Главная</a> | <a class="links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                        <a class="links" href="setting.html">Настройки</a>
                     </div>
                 </div>
             </div>
