--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>Loading...</title>
-        <link rel="stylesheet" href="css/style.css?v=5">
-        <link rel="stylesheet" href="css/index.css?v=5">
+        <link rel="stylesheet" href="css/style.css?v=7">
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -31,34 +30,31 @@
             startstylepage();
         </script>
         <div class="body-trans">
-            <progress class="progress-page" id="progresspage"></progress><h id="titlesys" class="invis"></h>
-            <div id="bodydiv" style="visibility: hidden;">
+            <progress class="nav-progress" id="progresspage"></progress><h id="titlesys" class="invis"></h>
+            <div id="bodydiv" class="nav-body" style="visibility: hidden;">
                 <div class="content">
-                    <!—noindex—>
                     <div class="onecol">
-                        <img id="cover" class="cover">
-                        <div id="title" class="titlediv">
-                            <img class="logo-data" src="img/logo-c.png">
+                        <div id="title" class="nav-card index-logo">
+                            <img class="index-logo-data" src="img/logo-c.png">
                         </div>
                         <a class="links" href="https://discord.gg/WGktEbWTEV" target="_blank"><button class="nav-button button-e">[Discord] Новости на Silver Town</button></a>
                         <hr class="pc-only nav-hr">
                         <button id="lastchbutton" class="nav-button button-e" onclick="last_ch_go()"></button>
                         <div class="pc-only">
-                            <a class="links" href="setting.html"><button class="nav-button button-e">Настройки</button></a>
-                            <a class="links" href="news.html" target="_blank"><button class="nav-button button-e">v 0.4.2</button></a><br>
+                            <a href="setting.html"><button class="nav-button button-e">Настройки</button></a>
+                            <a href="news.html" target="_blank"><button class="nav-button button-e">v 0.4.3</button></a><br>
                             <hr class="pc-only nav-hr">
-                            <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
-                            <a class="links" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a>
-                            <a class="links" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank"><button class="nav-button button-e">GitHub</button></a><br>
+                            <a href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
+                            <a href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a>
+                            <a href="https://github.com/Hell13Cat/static-manga-engine" target="_blank"><button class="nav-button button-e">GitHub</button></a><br>
                         </div>
                     </div>
-                    <!—/noindex—>
                     <div class="twocol">
                         <p id="helper1" class="invis"></p>
                     </div>
-                    <div class="copyright mobile-only">
+                    <div class="mobile-only">
                         <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a> | <a class="links" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
-                        <a class="links" href="setting.html">Настройки</a> | <a class="links" href="news.html">v 0.4.2</a>
+                        <a class="links" href="setting.html">Настройки</a> | <a class="links" href="news.html">v 0.4.3</a>
                     </div>
                 </div>
             </div>
