--- a/news.html
+++ b/news.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Новости</title>
-        <link rel="stylesheet" href="css/style.css?v=5">
-        <link rel="stylesheet" href="css/setting.css?v=5">
+        <link rel="stylesheet" href="css/style.css?v=7">
+        <link rel="stylesheet" href="css/setting.css?v=7">
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBB07CK3DY"></script>
@@ -29,61 +29,67 @@
             startstylepage();
         </script>
         <div class="body-trans">
-            <div id="bodydiv" class="content">
-                <div class="onecol">
-                    <div id="title" class="titlediv nav-button">
-                        <h1>Версии</h1>
+            <div id="bodydiv" class="nav-body">
+                <div class="content">
+                    <div class="onecol">
+                        <div id="title" class="titlediv nav-button">
+                            <h1>Версии</h1>
+                        </div>
+                        <div class="pc-only">
+                            <a href="."><button class="nav-button button-e">Главная</button></a>
+                            <hr class="pc-only nav-hr">
+                            <a href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
+                            <a href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a><br>
+                        </div>
                     </div>
-                    <div class="pc-only">
-                        <a class="aace links button-e" href="."><button class="nav-button">Главная</button></a>
-                        <hr class="pc-only nav-hr">
-                        <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
-                        <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a><br>
-                    </div>
-                </div>
-                <div class="twocol">
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.4.2</h2>
-                        <p class="card-block">- Изменение разметки<br>- Изменен шрифт<br>- Немного исправления ошибок<br>- Добавлена история версии</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.4.1</h2>
-                        <p class="card-block">- Добавлен логотип<br>- Изменён дизайн и темы</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.4.0</h2>
-                        <p class="card-block">- Сделана полноценная версия сайта для ПК<br>- Изменены иконки сайта</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.3.2</h2>
-                        <p class="card-block">- Изменена разметка главной страницы<br>- Удалено подчёркивание ссылок</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.3.1</h2>
-                        <p class="card-block">- Мелкие исправления разметки главной страницы в режиме для ПК<br>- Изменены цвета ссылок на более мягкие<br>- Очень незначительная оптимизация кода<br>- Кэш теперь чистить не нужно :D</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.3.0</h2>
-                        <p class="card-block">- Добавлен счетчик страниц<br>- Добавлена возможность перехода на следующую главу без выхода из читалки<br>- Добавлено сохранение последней прочитаной главы<br>- Глобальные изменения базы данных глав<br>- Добавлена тема "темная"<br>- Измненена главная страница для Google поиска</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.2.1</h2>
-                        <p class="card-block">- Отдельная страница настроек<br>- Изменение вёрстки главной страницы и страницы с описанием манги<br>- Добавлено описание в информацию манги<br>- Начато партнёрство с Discord сервером Silver Town</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.2.0</h2>
-                        <p class="card-block">- Система тем (настройки сохраняются на месяц)<br>- Исправление читалки (теперь заголовок не исчезает, а удаляется)<br>- Изменён шрифт</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.1.2</h2>
-                        <p class="card-block">- На странице манги во вкладке теперь отображается её название<br>- На странице главы во вкладке теперь отображается её название</p>
-                    </div>
-                    <div class="al-left nav-button">
-                        <h2 class="card-block-h">0.1.1</h2>
-                        <p class="card-block">- Авто-адаптация кнопок читалки в зависимости от ширины экрана<br>- Отимизирован JS у читалки</p>
-                    </div>
-                    <div class="copyright mobile-only">
-                        <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                    <div class="twocol">
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.4.3</h2>
+                            <p class="card-nav-content">- Незначительная перераотка дизайна<br>- Оптимизация ресурсов</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.4.2</h2>
+                            <p class="card-nav-content">- Изменение разметки<br>- Изменен шрифт<br>- Немного исправления ошибок<br>- Добавлена история версии</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.4.1</h2>
+                            <p class="card-nav-content">- Добавлен логотип<br>- Изменён дизайн и темы</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.4.0</h2>
+                            <p class="card-nav-content">- Сделана полноценная версия сайта для ПК<br>- Изменены иконки сайта</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.3.2</h2>
+                            <p class="card-nav-content">- Изменена разметка главной страницы<br>- Удалено подчёркивание ссылок</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.3.1</h2>
+                            <p class="card-nav-content">- Мелкие исправления разметки главной страницы в режиме для ПК<br>- Изменены цвета ссылок на более мягкие<br>- Очень незначительная оптимизация кода<br>- Кэш теперь чистить не нужно :D</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.3.0</h2>
+                            <p class="card-nav-content">- Добавлен счетчик страниц<br>- Добавлена возможность перехода на следующую главу без выхода из читалки<br>- Добавлено сохранение последней прочитаной главы<br>- Глобальные изменения базы данных глав<br>- Добавлена тема "темная"<br>- Измненена главная страница для Google поиска</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.2.1</h2>
+                            <p class="card-nav-content">- Отдельная страница настроек<br>- Изменение вёрстки главной страницы и страницы с описанием манги<br>- Добавлено описание в информацию манги<br>- Начато партнёрство с Discord сервером Silver Town</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.2.0</h2>
+                            <p class="card-nav-content">- Система тем (настройки сохраняются на месяц)<br>- Исправление читалки (теперь заголовок не исчезает, а удаляется)<br>- Изменён шрифт</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.1.2</h2>
+                            <p class="card-nav-content">- На странице манги во вкладке теперь отображается её название<br>- На странице главы во вкладке теперь отображается её название</p>
+                        </div>
+                        <div class="al-left nav-button">
+                            <h2 class="card-nav-content">0.1.1</h2>
+                            <p class="card-nav-content">- Авто-адаптация кнопок читалки в зависимости от ширины экрана<br>- Отимизирован JS у читалки</p>
+                        </div>
+                        <div class="copyright mobile-only">
+                            <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="links" href=".">/Главная</a> | <a class="links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                        </div>
                     </div>
                 </div>
             </div>
