--- a/setting.html
+++ b/setting.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Настройки</title>
-        <link rel="stylesheet" href="css/style.css?v=5">
-        <link rel="stylesheet" href="css/setting.css?v=5">
+        <link rel="stylesheet" href="css/style.css?v=7">
+        <link rel="stylesheet" href="css/setting.css?v=7">
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBB07CK3DY"></script>
@@ -29,28 +29,34 @@
             startstylepage();
         </script>
         <div class="body-trans">
-            <div id="bodydiv" class="content">
-                <div class="onecol">
-                    <div id="title" class="titlediv nav-button">
-                        <h1>Настройки</h1>
+            <div id="bodydiv" class="nav-body">
+                <div class="content">
+                    <div class="onecol">
+                        <div id="title" class="titlediv nav-button">
+                            <h1>Настройки</h1>
+                        </div>
+                        <div class="pc-only">
+                            <a href="."><button class="nav-button button-e">Главная</button></a>
+                            <hr class="pc-only nav-hr">
+                            <a href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
+                            <a href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a><br>
+                        </div>
                     </div>
-                    <div class="pc-only">
-                        <a class="aace links button-e" href="."><button class="nav-button">Главная</button></a>
-                        <hr class="pc-only nav-hr">
-                        <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
-                        <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a><br>
-                    </div>
-                </div>
-                <div class="twocol">
-                    <div class="al-left">
-                        <p class="aace nav-button">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
-                        <h2 class="aace al-left nav-button">Тема</h2>
-                        <button class="nav-button button-e" onclick="swap_theme(3)">Темная</button><br>
-                        <button class="nav-button button-e" onclick="swap_theme(2)">Белая</button><br>
-                        <button class="nav-button button-e" onclick="swap_theme(1)">Чёрная</button><br>
-                    </div>
-                    <div class="copyright mobile-only">
-                        <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                    <div class="twocol">
+                        <div class="al-left">
+                            <div class="nav-card">
+                                <p class="card-nav-content">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
+                            </div>
+                            <div class="nav-card">
+                                <h2 class="card-nav-content">Тема</h2>
+                            </div>
+                            <button class="nav-button button-e" onclick="swap_theme(3)">Темная</button><br>
+                            <button class="nav-button button-e" onclick="swap_theme(2)">Белая</button><br>
+                            <button class="nav-button button-e" onclick="swap_theme(1)">Чёрная</button><br>
+                        </div>
+                        <div class="copyright mobile-only">
+                            <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="links" href=".">/Главная</a> | <a class="links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                        </div>
                     </div>
                 </div>
             </div>
