--- a/ch.html
+++ b/ch.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Страница главы</title>
-        <link rel="stylesheet" href="css/style.css?v=5">
-        <link rel="stylesheet" href="css/ch.css?v=5">
-        <link rel="stylesheet" href="css/color-dark.css?v=4">
+        <link rel="stylesheet" href="css/style.css?v=7">
+        <link rel="stylesheet" href="css/color-dark.css?v=7">
         <script type="text/javascript" src="js/ch.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,40 +26,42 @@
             startstylepage();
         </script>
         <div class="body-trans">
-            <progress class="progress-page" id="progresspage"></progress><h id="titlesys" class="invis"></h>
-            <div class="content" id="bodydiv" style="visibility: hidden;">
-                <div class="onecol">
-                    <div id="title_ch" class="titlediv nav-button">
-                        <h2 id="namech"></h2>
+            <progress class="nav-progress" id="progresspage"></progress><h id="titlesys" class="invis"></h>
+            <div class="nav-body" id="bodydiv" style="visibility: hidden;">
+                <div class="content">
+                    <div class="onecol">
+                        <div id="title_ch" class="nav-button">
+                            <p id="namech" class="manga-nav-content"></h2>
+                        </div>
+                        <div class="pc-only">
+                            <button class="nav-button button-e"  onclick="manga_page()">Главы</button>
+                            <button class="nav-button button-e"  onclick="toggleFullScreen()">Экран</button>
+                            <hr class="nav-hr">
+                            <a class="links" href="."><button class="nav-button button-e">Главная</button></a>
+                            <a class="links" href="setting.html"><button class="nav-button button-e">Настройки</button></a>
+                            <hr class="nav-hr">
+                            <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
+                            <a class="links" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a><br>
+                            
+                        </div>
                     </div>
-                    <button class="card-button-ch nav-button-home pc-only"  onclick="manga_page()">Главы</button>
-                    <button class="card-button-ch nav-button-fullscreen pc-only"  onclick="toggleFullScreen()">Экран</button>
-                    <div id="copyright" class="pc-only">
-                        <hr class="pc-only nav-hr">
-                        <a class="aace links" href="."><button class="nav-button button-e">Главная</button></a>
-                        <a class="aace links" href="setting.html"><button class="nav-button button-e">Настройки</button></a>
-                        <hr class="pc-only nav-hr">
-                        <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button button-e">DCMA</button></a>
-                        <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button button-e">Telegram</button></a><br>
-                        
+                    <div class="twocol">
+                        <progress class="nav-progress" id="progressimage"></progress>
+                        <p class="aace"><span id="curentpage">1</span> / <span id="totalpage"></span></p>
+                        <img src="" id="mangapage" style="width: 100%;"><br>
+                        <progress class="nav-progress" id="progressimage2"></progress><br>
+                        <div id="pc_elem">
+                            <button id="prevbutton" class="ch-button nav-button button-e" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="ch-button nav-button button-e" onclick="page_flip(1)">Страница &#62;</button>
+                        </div>
+                        <div id="mobile_elem">
+                            <button id="prevbutton" class="ch-button nav-button button-e" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="ch-button nav-button button-e" onclick="page_flip(1)">Страница &#62;</button></br>
+                            <button class="ch-button nav-button button-e"  onclick="toggleFullScreen()">Экран</button><button class="ch-button nav-button button-e"  onclick="manga_page()">Главы</button>
+                        </div>
                     </div>
-                </div>
-                <div class="twocol">
-                    <progress class="progress-page" id="progressimage"></progress>
-                    <p class="aace"><span id="curentpage">1</span> / <span id="totalpage"></span></p>
-                    <img src="" id="mangapage"><br>
-                    <progress class="progress-page" id="progressimage2"></progress><br>
-                    <div id="pc_elem">
-                    <button id="prevbutton" class="card-button-ch nav-button-ch" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="card-button-ch nav-button-ch" onclick="page_flip(1)">Страница &#62;</button>
+                    <div id="copyright" class="mobile-only">
+                        <a class="links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="links" href=".">/Главная</a> | <a class="links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                        <a class="links" href="setting.html">Настройки</a>
                     </div>
-                    <div id="mobile_elem">
-                        <button id="prevbutton" class="card-button-ch nav-button-ch" onclick="page_flip(-1)">&#60; Страница</button><button id="nextbutton" class="card-button-ch nav-button-ch" onclick="page_flip(1)">Страница &#62;</button></br>
-                        <button class="card-button-ch nav-button-fullscreen"  onclick="toggleFullScreen()">Экран</button><button class="card-button-ch nav-button-home"  onclick="manga_page()">Главы</button>
-                    </div>
-                </div>
-                <div id="copyright" class="copyright mobile-only">
-                    <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
-                    <a class="aace links" href="setting.html">Настройки</a>
                 </div>
             </div>
             <p id="infoflipch" class="invis"></p><p id="infotitle" class="invis"></p><p id="infostart" class="invis"></p><p id="infoend" class="invis"></p><p id="infohead" class="invis"></p>
